# OSY

./: .gitignore  homework_cv02.sh  homework_cv03.sh
cv04/: .gitignore  CMakeLists.txt  Makefile  forkpipe.c
hw04/: forkpipe  nsd
hw05/: .gitignore  CMakeLists.txt  Makefile  main.c
hw06/: CMakeLists.txt  Makefile  buffers.c  buffers.h  commands.c  commands.h  factory.c  factory.h  global.h  job_handler.c  job_handler.h  job_provider.c  job_provider.h  main.c  worker.c  worker.h  worker_provider.c  worker_provider.h  workplace_chain.c  workplace_chain.h  workplace_provider.c  workplace_provider.h
hw06/input/: test11  test12  test15  test16  test18  test8  test9  test_mine  tmp
hw07/: CMakeLists.txt  Makefile  hexconv.c
hw10/nova/: Makefile
hw10/nova/kern/src/: ec_syscall.cc
hw10/nova/user/: Makefile  hello  hello.c  hello.map
hw10/nova/user/lib/: init.cc  stdio.cc  stdio.h
